--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
      <p>Name: *<input type="text" name="name" required></p>
      <fieldset>
          <legend>Gender *</legend>
-         <p> Male<input type="radio" id="male" name="gender" required>  Female <input type="radio" inputmode="tel"></p>
+         <p> Male<input type="radio" value="male" name="gender"  required>  Female <input type="radio" value="female" name="gender"></p>
      </fieldset>
      <p>Address: *<textarea name="address" id="address"  cols="30" rows="8" required></textarea>
      <p>Email: *<input type="text" name="Email"  id="Email" required></p>
